envoy_forward_proxy/envoy_config.json
{
  "listeners": [
    {
      "address": "tcp://0.0.0.0:80",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "forward_http",
            "http1_settings": {
              "allow_absolute_url": true
            },
            "route_config": {
              "virtual_hosts": [
                {
                  "name": "default_http",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "forward_proxy_http"
                    }
                  ]
                }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    },
    {
      "address": "tcp://0.0.0.0:443",
      "filters": [
        {
          "type": "read",
          "name": "http_connection_manager",
          "config": {
            "codec_type": "auto",
            "stat_prefix": "forward_https",
            "http1_settings": {
              "allow_absolute_url": true
            },
            "route_config": {
              "virtual_hosts": [
                  {
                  "name": "default_https",
                  "domains": ["*"],
                  "routes": [
                    {
                      "timeout_ms": 0,
                      "prefix": "/",
                      "cluster": "forward_proxy_https"
                    }
                  ]
                  }
              ]
            },
            "filters": [
              {
                "type": "decoder",
                "name": "router",
                "config": {}
              }
            ]
          }
        }
      ]
    }
  ],
  "admin": {
    "access_log_path": "/tmp/access_log",
    "address": "tcp://0.0.0.0:8001"
  },
  "cluster_manager": {
      "clusters": [
          {
              "name": "forward_proxy_http",
              "connect_timeout_ms": 2500,
              "type": "static",
              "lb_type": "round_robin",
              "hosts": [
                  {
                      "url": "tcp://127.0.0.1:8080"
                  }
              ]
          },
          {
              "name": "forward_proxy_https",
              "connect_timeout_ms": 2500,
              "type": "static",
              "lb_type": "round_robin",
              "hosts": [
                  {
                      "url": "tcp://127.0.0.1:8081"
                  }
              ]
          }
    ]
  }
}
